syntax = "proto3";

package protoc.gen.vlossom;
option go_package = "protoc-gen-vlossom/generator/protooptions";

import "google/protobuf/descriptor.proto";

// Not extendable, just define structure
message PluginOptions {
  optional bool exposeAll = 1;
  optional string outputFileSuffix = 2;
}

message FileOptions {
  optional bool expose = 1;
  string entrypointMessage = 2;
}

message MessageOptions {
  optional bool expose = 1;
}

message FieldOptions {
  optional bool expose = 1;
  string property = 2;
  oneof width {
    int32 rem = 3;
    int32 lg = 4;
  }
  string label = 5;
  string placeholder = 6;
  State state = 7;
  ComponentType component = 8;

  oneof Options {
    InputOptions input = 21;
    MultiStringOptions multiString = 22;
    SelectOptions select = 23;
    CheckboxSetOptions checkboxSet = 24;
    TextAreaOptions textArea = 25;
    JsonEditorOptions jsonEditor = 26;
    RadioOptions radio = 27;
    RadioSetOptions radioSet = 28;
  }
}

enum State {
  unspecified = 0;
  primary = 1;
  info = 2;
  success = 3;
  warn = 4;
  idle = 5;
}

enum ComponentType {
  Inference = 0;
  Input = 1;
  MultiString = 2;
  Select = 3;
  Checkbox = 4;
  CheckboxSet = 5;
  Switch = 6;
  DateRangePicker = 7;
  DateTimePicker = 8;
  TextArea = 9;
  JsonEditor = 10;
  Radio = 11;
  RadioSet = 12;
}

message InputOptions {
  enum Type {
    inference = 0;
    text = 1;
    number = 2;
  }
  Type type = 1;
  optional int32 min = 2;
  optional int32 max = 3;
}

message MultiStringOptions {
  string delimeter = 1;
  optional int32 max = 2;
  bool noChips = 3;
  bool copy = 4;
}

message SelectOptions {
  VlossomOptions options = 1;
  bool autocomplete = 2;
  bool multiple = 3;
  bool selectAll = 4 [json_name = "select-all"];
  bool collapseChips = 5 [json_name = "collapse-chips"];
  bool closableChips = 6 [json_name = "closable-chips"];
  optional int32 infiniteLoad = 7 [json_name = "infinite-load"];
}

message CheckboxSetOptions {
  VlossomOptions options = 1;
  bool column = 2;
}

message TextAreaOptions {
  optional int32 min = 1;
  optional int32 max = 2;
}

message JsonEditorOptions {
  optional int32 height = 1;
}

message RadioOptions {
  string radioLabel = 1;
  string name = 2;
}

message RadioSetOptions {
  VlossomOptions options = 1;
  bool column = 2;
}

message VlossomOptions {
  repeated string simpleOptions = 1 [json_name = "options"];
  repeated LabeledOption labeledOptions = 2 [json_name = "options"];
  optional string optionLabel = 3 [json_name = "option-label"];
  optional string optionValue = 4 [json_name = "option-value"];

  message LabeledOption {
    string label = 1;
    oneof Value {
      string string = 2;
      int64 integer = 3;
      double float = 4;
    }
  }
}

message EnumOptions {

}

message EnumValueOptions {
  oneof Value {
    string string = 1;
    int64 integer = 2;
    double float = 3;
  }
}

extend google.protobuf.FileOptions {
  FileOptions file_options = 11241;
}

extend google.protobuf.FieldOptions {
  FieldOptions field_options = 11242;
}

extend google.protobuf.MessageOptions {
  MessageOptions message_options = 11243;
}

extend google.protobuf.EnumOptions {
  EnumOptions enum_options = 11244;
}

extend google.protobuf.EnumValueOptions {
  EnumValueOptions enum_value_options = 11245;
}
